--- a/Client/AuthWindow.xaml
+++ b/Client/AuthWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Client.AuthWindow"
+﻿<Window x:Name="AuthWindowForm" x:Class="Client.AuthWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
