--- a/Client/MainWindow.xaml
+++ b/Client/MainWindow.xaml
@@ -5,21 +5,34 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Client" d:DataContext="{d:DesignInstance Type=local:ChatViewModel}"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800"
-        Style="{DynamicResource CustomWindowStyle}">
-    <Grid>
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="30" Margin="73,286,0,0" Text="{Binding Message}" TextWrapping="Wrap" VerticalAlignment="Top" Width="437"/>
+        Title="MainWindow" Width="800"
+        Style="{DynamicResource CustomWindowStyle}" BorderThickness="0,0,0,0" Height="500" MinWidth="800" Margin="0,0,0,0">
+    <Grid Margin="0,0,0,0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="25"/>
+            <RowDefinition MinHeight="400" Height="22*"></RowDefinition>
+            <RowDefinition Height="50"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition MinWidth="200"></ColumnDefinition>
+            <ColumnDefinition Width="91*"/>
+            <ColumnDefinition MaxWidth="150" Width="30*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
 
-        <Button x:Name="button" IsEnabled="{Binding IsConnected}" Command="{Binding SendMessageCommand}" Content="Send" HorizontalAlignment="Left" Height="35" Margin="525,284,0,0" VerticalAlignment="Top" Width="200" Cursor="Hand"/>
-        <ListView x:Name="listView" Margin="73,10,73,162" ItemsSource="{Binding Messages}">
+        <Grid Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2"/>
+
+        <ListView x:Name="listView" ItemsSource="{Binding Messages}" Grid.Column="1" Grid.Row="1" d:LayoutOverrides="VerticalAlignment" Grid.ColumnSpan="2" Margin="0,0,0,0">
             <ListView.View>
                 <GridView AllowsColumnReorder="True">
-                    <GridViewColumn DisplayMemberBinding="{Binding User}" Width="100"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Message}" Width="200"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding User}" Width="150"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Message}" Width="450"/>
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button x:Name="button1" Content="Add file" HorizontalAlignment="Left" Height="35" Margin="525,339,0,0" VerticalAlignment="Top" Width="200" Click="ChooseFile"/>
-        <Grid x:Name="Documents" Margin="73,334,278,53"/>
+
+        <TextBox x:Name="textBox" Text="{Binding Message}" TextWrapping="Wrap" Grid.Row="2" Margin="5,5,5,5" Grid.Column="1" Height="25"/>
+        <Button x:Name="SendMessageBtn" Command="{Binding SendMessageCommand}" Grid.Column="2" Grid.Row="2" MinHeight="20" Content="Отправить" Margin="25,5,25,0" Width="100" Height="20" VerticalAlignment="Top" d:LayoutOverrides="Height"/>
+        <Button x:Name="AddFile" Content="Добавить файл" HorizontalAlignment="Center" VerticalAlignment="Top" Click="ChooseFile" MinHeight="20" MinWidth="70" Margin="0,25,0,0" Grid.Column="2" Grid.Row="2" Width="100"/>
+        <ListBox x:Name="ChatsList" Grid.RowSpan="3" Width="200"/>
     </Grid>
 </Window>
