--- a/Client/MainWindow.xaml
+++ b/Client/MainWindow.xaml
@@ -1,22 +1,23 @@
-﻿<Window x:Class="Client.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Client" d:DataContext="{d:DesignInstance Type=local:ChatViewModel}"
+        xmlns:local="clr-namespace:Client" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" x:Class="Client.MainWindow"
+        d:DataContext="{d:DesignInstance Type={x:Type local:ChatViewModel}}"
         mc:Ignorable="d"
         Title="MainWindow" Width="800"
         Style="{DynamicResource CustomWindowStyle}" BorderThickness="0,0,0,0" Height="500" MinWidth="800" Margin="0,0,0,0">
     <Grid Margin="0,0,0,0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <Grid.RowDefinitions>
             <RowDefinition Height="25"/>
-            <RowDefinition MinHeight="400" Height="22*"></RowDefinition>
-            <RowDefinition Height="50"></RowDefinition>
+            <RowDefinition MinHeight="400" Height="22*"/>
+            <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition MinWidth="200"></ColumnDefinition>
+            <ColumnDefinition MinWidth="200"/>
             <ColumnDefinition Width="91*"/>
-            <ColumnDefinition MaxWidth="150" Width="30*"></ColumnDefinition>
+            <ColumnDefinition MaxWidth="150" Width="30*"/>
         </Grid.ColumnDefinitions>
 
         <Grid Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2"/>
@@ -30,7 +31,7 @@
             </ListView.View>
         </ListView>
 
-        <TextBox x:Name="textBox" Text="{Binding Message}" TextWrapping="Wrap" Grid.Row="2" Margin="5,5,5,5" Grid.Column="1" Height="25"/>
+        <TextBox x:Name="textBox" Text="{Binding MessageTask.MessageText}" TextWrapping="Wrap" Grid.Row="2" Margin="5,5,5,5" Grid.Column="1" Height="25"/>
         <Button x:Name="SendMessageBtn" Command="{Binding SendMessageCommand}" Grid.Column="2" Grid.Row="2" MinHeight="20" Content="Отправить" Margin="25,5,25,0" Width="100" Height="20" VerticalAlignment="Top" d:LayoutOverrides="Height"/>
         <Button x:Name="AddFile" Content="Добавить файл" HorizontalAlignment="Center" VerticalAlignment="Top" Click="ChooseFile" MinHeight="20" MinWidth="70" Margin="0,25,0,0" Grid.Column="2" Grid.Row="2" Width="100"/>
         <ListBox x:Name="ChatsList" Grid.RowSpan="3" Width="200"/>
