--- a/Client/AuthWindow.xaml
+++ b/Client/AuthWindow.xaml
@@ -1,12 +1,11 @@
-﻿<Window x:Name="AuthWindowForm" x:Class="Client.AuthWindow"
+﻿<Window x:Name="AuthWindowForm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Client"
         mc:Ignorable="d"
         Title="Авторизация" Height="450" Width="350"
-        Style="{DynamicResource CustomWindowStyle}">
+        xmlns:local="clr-namespace:Client" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" x:Class="Client.AuthWindow">
     <Grid Margin="0,0,-2,0">
         <TextBox x:Name="LoginEmailBox" HorizontalAlignment="Center" Height="30" Margin="0,197,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300" VerticalContentAlignment="Center" Padding="10,5,0,7"/>
         <PasswordBox x:Name="LoginPassBox" HorizontalAlignment="Center" Height="30" Margin="0,279,0,0" VerticalAlignment="Top" Width="300" VerticalContentAlignment="Center" Padding="10,5,0,5"/>
