--- a/Client/MainWindow.xaml
+++ b/Client/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Client" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" x:Class="Client.MainWindow"
+        xmlns:local="clr-namespace:Client" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:system="clr-namespace:System;assembly=System.Runtime" x:Class="Client.MainWindow"
         d:DataContext="{d:DesignInstance Type={x:Type local:ChatViewModel}}"
         mc:Ignorable="d"
         Title="MainWindow" Width="800"
@@ -12,49 +12,200 @@
         WindowState="Maximized"
         BorderThickness="0,0,0,0" Height="500" MinWidth="800" Margin="0,0,0,0" MinHeight="500">
     <Grid Margin="0,0,0,0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <!--Main grid-->
         <Grid.RowDefinitions>
-            <RowDefinition Height="25"/>
+            <RowDefinition Height="65"/>
             <RowDefinition />
             <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="50"/>
             <ColumnDefinition MaxWidth="250" Width="*"/>
-            <ColumnDefinition Width="60"/>
             <ColumnDefinition/>
-            <ColumnDefinition Width="60"/>
         </Grid.ColumnDefinitions>
 
-        <Grid Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="3"/>
+        <!--Settings modal-->
+        <materialDesign:DialogHost Identifier="settings" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2" Grid.RowSpan="3"/>
 
-        <ListView x:Name="listView" ItemsSource="{Binding Messages}" Grid.Column="2" Grid.Row="1" d:LayoutOverrides="VerticalAlignment" Grid.ColumnSpan="3" Margin="0,0,0,0">
-            <ListView.View>
-                <GridView AllowsColumnReorder="True">
-                    <GridViewColumn DisplayMemberBinding="{Binding User}"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Message}"/>
-                </GridView>
-            </ListView.View>
+        <!--Start message before select chat-->
+        <Grid Grid.Column="2" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" x:Name="UserChoisPrompt">
+            <Rectangle Fill="LightBlue" RadiusX="7" RadiusY="7"/>
+            <TextBlock Text="Выберите, кому хотите написать" Padding="10,5,10,5"/>
+        </Grid>
+
+        <!--Messages list-->
+        <ListView x:Name="MessagesView" Grid.Column="2" ItemsSource="{Binding Messages}" Style="{StaticResource MaterialDesignListView}" Grid.Row="1" d:LayoutOverrides="VerticalAlignment" Grid.ColumnSpan="1" Margin="0,0,0,0">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Grid x:Name="MessageDataGrid">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+
+                        <Image Source="logo.jpg" Width="30" Height="30" Grid.Column="0" Grid.ColumnSpan="1">
+                            <Image.Clip>
+                                <EllipseGeometry RadiusX="15" RadiusY="15" Center="15,15"/>
+                            </Image.Clip>
+                        </Image>
+
+                        <Grid x:Name="UserCardDataGrid" Grid.Column="1" Margin="5,5,5,5">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+
+                            <TextBlock Grid.Column="0" Grid.ColumnSpan="1" Grid.Row="0" Text="{Binding Message}" VerticalAlignment="Center"/>
+                        </Grid>
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
         </ListView>
 
-        <TextBox x:Name="textBox" Text="{Binding MessageTask.MessageText}" TextWrapping="Wrap" Grid.Row="2" Margin="5,5,5,5" Grid.Column="3" Height="25"/>
-        <Button x:Name="SendMessageBtn" Command="{Binding SendMessageCommand}" Grid.Column="4" Grid.Row="2" MinHeight="20" Margin="5,0,5,0" VerticalAlignment="Center" d:LayoutOverrides="TopPosition, BottomPosition">
-            <materialDesign:PackIcon Kind="Send" />
-        </Button>
-        <Button x:Name="AddFile" Click="ChooseFile" Grid.Column="2" Grid.Row="2" Margin="6,14,6,14" Width="48" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <materialDesign:PackIcon Kind="Paperclip" />
-        </Button>
-        <ListBox x:Name="ChatsList" Grid.RowSpan="3" MaxWidth="250" ItemsSource="{Binding Users}" Grid.Column="1"/>
-        <TabControl  Style="{StaticResource MaterialDesignNavigatilRailTabControl}"  materialDesign:ColorZoneAssist.Mode="Standard"  materialDesign:ShadowAssist.ShadowDepth="Depth0" Grid.RowSpan="3">
-            <TabItem Header="{materialDesign:PackIcon Kind=Heart, Size=24}" Style="{StaticResource MaterialDesignNavigationRailTabItem}" Width="50" Height="50" Padding="0,0,0,0" />
-            <TabItem Header="{materialDesign:PackIcon Kind=Settings, Size=24}" Style="{StaticResource MaterialDesignNavigationRailTabItem}" Width="50" Height="50" Padding="0,0,0,0" MouseLeftButtonUp="OpenSettings" />
-        </TabControl>
+        <!--Chat list-->
+        <ListBox x:Name="ChatsList" Grid.RowSpan="3" Style="{StaticResource MaterialDesignListBox}" MaxWidth="250" ItemsSource="{Binding Users}" Grid.Column="1" SelectionChanged="ChatsList_SelectionChanged">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Grid x:Name="UserCardGrid">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="50"/>
+                            <ColumnDefinition Width="150"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="50"/>
+                        </Grid.RowDefinitions>
 
-        <Popup Name="MyPopup"               
-               Placement="Center"
-               AllowsTransparency="True">
-            <Grid>
-                <Ellipse Width="200" Height="200" Fill="Aquamarine"/>
-            </Grid>
-        </Popup>
+                        <Image Source="logo.jpg" Width="50" Height="50" Grid.Column="0" Grid.ColumnSpan="1">
+                            <Image.Clip>
+                                <EllipseGeometry RadiusX="25" RadiusY="25" Center="25,25"/>
+                            </Image.Clip>
+                        </Image>
+
+                        <Grid x:Name="UserCardDataGrid" Grid.Column="1" Margin="5,5,5,5">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+
+                            <TextBlock Grid.Column="0" Grid.ColumnSpan="1" Grid.Row="0" Text="{Binding Email}" VerticalAlignment="Center"/>
+                            <TextBlock Grid.Column="0" Grid.ColumnSpan="1" Grid.Row="1" Text="{Binding Email}" FontSize="9" VerticalAlignment="Bottom"/>
+                        </Grid>
+                    </Grid>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+
+        <!--Sender row-->
+        <Grid x:Name="SenderRow" Grid.Row="2" Grid.Column="2" Visibility="Hidden">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="60"/>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="60"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+
+            <TextBox x:Name="MessageTextBox" Text="{Binding MessageTask.MessageText}" TextWrapping="Wrap" Margin="5,5,5,5" Height="25" Grid.Column="1"/>
+
+            <Button x:Name="AddFile" Click="ChooseFile" HorizontalAlignment="Center" VerticalAlignment="Center" Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}" Opacity="1" Cursor="Hand">
+                <materialDesign:PackIcon Kind="Paperclip" />
+            </Button>
+
+            <Button x:Name="SendMessageBtn" Command="{Binding SendMessageCommand}" Grid.Column="2" MinHeight="20" Margin="5,0,5,0" VerticalAlignment="Center" d:LayoutOverrides="TopPosition, BottomPosition" Click="SendMessage">
+                <materialDesign:PackIcon Kind="Send" />
+            </Button>
+        </Grid>
+
+        <!--Task list-->
+        <ListBox Grid.Row="0" Grid.Column="2" Padding="10,10,10,10">
+            <ListBox.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel Orientation="Horizontal"/>
+                </ItemsPanelTemplate>
+            </ListBox.ItemsPanel>
+            <!--<ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+                    </Grid>
+                </DataTemplate>
+            </ListBox.ItemTemplate>-->
+            <ListBoxItem Padding="5,0,5,0" Margin="5,5,5,5">
+                <Grid Width="140">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition Width="25"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition Height="25"/>
+                    </Grid.RowDefinitions>
+
+                    <TextBlock Grid.Column="0" Grid.Row="0" FontSize="14" Foreground="Green" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">В работе</TextBlock>
+                    <TextBlock Grid.Column="0" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Center">2021-06-25</TextBlock>
+                    <Button Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" Padding="0,0,0,0"  Width="25" Height="25">
+                        <materialDesign:PackIcon Kind="InformationOutline"/>
+                    </Button>
+                </Grid>
+            </ListBoxItem>
+            <ListBoxItem Padding="5,0,5,0" Margin="5,5,5,5">
+                <Grid Width="140">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition Width="25"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition Height="25"/>
+                    </Grid.RowDefinitions>
+
+                    <TextBlock Grid.Column="0" Grid.Row="0" FontSize="14" Foreground="Red" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">Просрочено</TextBlock>
+                    <TextBlock Grid.Column="0" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Center">2021-06-25</TextBlock>
+                    <Button Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" Padding="0,0,0,0"  Width="25" Height="25">
+                        <materialDesign:PackIcon Kind="InformationOutline"/>
+                    </Button>
+                </Grid>
+            </ListBoxItem>
+            <ListBoxItem Padding="5,0,5,0" Margin="5,5,5,5">
+                <Grid Width="140">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition Width="25"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition Height="25"/>
+                    </Grid.RowDefinitions>
+
+                    <TextBlock Grid.Column="0" Grid.Row="0" FontSize="14" Foreground="DarkSlateGray" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">Для выполнения</TextBlock>
+                    <TextBlock Grid.Column="0" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Center">2021-06-25</TextBlock>
+                    <Button Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" Padding="0,0,0,0"  Width="25" Height="25">
+                        <materialDesign:PackIcon Kind="InformationOutline"/>
+                    </Button>
+                </Grid>
+            </ListBoxItem>
+        </ListBox>
+
+        <TabControl  Style="{StaticResource MaterialDesignNavigatilRailTabControl}"  materialDesign:ColorZoneAssist.Mode="PrimaryMid"  materialDesign:ShadowAssist.ShadowDepth="Depth0" Grid.RowSpan="3">
+            <TabItem Header="{materialDesign:PackIcon Kind=AccountCircleOutline, Size=24}" Style="{StaticResource MaterialDesignNavigationRailTabItem}" Width="50" Height="50" Padding="0,0,0,0" />
+            <TabItem Header="{materialDesign:PackIcon Kind=Settings, Size=24}" Style="{StaticResource MaterialDesignNavigationRailTabItem}" Width="50" Height="50" Padding="0,0,0,0" MouseLeftButtonUp="OpenSettings" />
+            <TabItem Header="{materialDesign:PackIcon Kind=ExitToApp, Size=24}" Style="{StaticResource MaterialDesignNavigationRailTabItem}" Width="50" Height="50" Padding="0,0,0,0"/>
+        </TabControl>
     </Grid>
 </Window>
