--- a/Client/MainWindow.xaml
+++ b/Client/MainWindow.xaml
@@ -68,7 +68,7 @@
         </ListView>
 
         <!--Chat list-->
-        <ListBox x:Name="ChatsList" Grid.RowSpan="3" Style="{StaticResource MaterialDesignListBox}" MaxWidth="250" ItemsSource="{Binding Users}" Grid.Column="1" SelectionChanged="ChatsList_SelectionChanged">
+        <ListBox x:Name="ChatsList" Grid.RowSpan="3" Style="{StaticResource MaterialDesignListBox}" MaxWidth="250" ItemsSource="{Binding Users}" Grid.Column="1" SelectionChanged="ChatsList_SelectionChanged" Background="#FFEBEBEB" BorderThickness="0,0,1,0" BorderBrush="Silver">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid x:Name="UserCardGrid">
@@ -106,27 +106,29 @@
         <!--Sender row-->
         <Grid x:Name="SenderRow" Grid.Row="2" Grid.Column="2" Visibility="Hidden">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="60"/>
+                <ColumnDefinition Width="65"/>
                 <ColumnDefinition/>
-                <ColumnDefinition Width="60"/>
+                <ColumnDefinition Width="65"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition/>
             </Grid.RowDefinitions>
 
-            <TextBox x:Name="MessageTextBox" Text="{Binding MessageTask.MessageText}" TextWrapping="Wrap" Margin="5,5,5,5" Height="25" Grid.Column="1"/>
+            <Rectangle Grid.ColumnSpan="3" Margin="5,5,5,5" Stroke="#FFB3B3B3" Height="Auto" Width="Auto" Fill="#FFE7E7E7" RadiusX="10" RadiusY="10"/>
 
-            <Button x:Name="AddFile" Click="ChooseFile" HorizontalAlignment="Center" VerticalAlignment="Center" Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}" Opacity="1" Cursor="Hand">
-                <materialDesign:PackIcon Kind="Paperclip" />
+            <TextBox x:Name="MessageTextBox" Text="{Binding MessageTask.MessageText}" TextWrapping="Wrap" Margin="0,15,0,15" Grid.Column="1" Padding="0,0,0,2" FontSize="14" VerticalContentAlignment="Bottom"/>
+
+            <Button x:Name="AddFile" Click="ChooseFile" Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}" Opacity="1" Cursor="Hand" IsDefault="True" Padding="0,0,0,0" Margin="0,0,0,13" HorizontalContentAlignment="Center" Background="{x:Null}" Foreground="#FF673AB7" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Bottom">
+                <materialDesign:PackIcon Kind="Paperclip" Width="30" Height="30" />
             </Button>
 
-            <Button x:Name="SendMessageBtn" Command="{Binding SendMessageCommand}" Grid.Column="2" MinHeight="20" Margin="5,0,5,0" VerticalAlignment="Center" d:LayoutOverrides="TopPosition, BottomPosition" Click="SendMessage">
-                <materialDesign:PackIcon Kind="Send" />
+            <Button x:Name="SendMessageBtn" Command="{Binding SendMessageCommand}" Grid.Column="2" MinHeight="20" Margin="0,0,0,13" Click="SendMessage" Padding="0,0,0,0" Foreground="#FF673AB7" Background="{x:Null}" BorderBrush="{x:Null}" BorderThickness="0,1,0,0" HorizontalAlignment="Center" VerticalAlignment="Bottom">
+                <materialDesign:PackIcon Kind="Send" Width="30" Height="30" VerticalContentAlignment="Top" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" />
             </Button>
         </Grid>
 
         <!--Task list-->
-        <ListBox Grid.Row="0" Grid.Column="2" Padding="10,10,10,10">
+        <ListBox Grid.Row="0" Grid.Column="2" Padding="10,10,10,10" Background="{x:Null}" BorderBrush="#FFDFDFDF" BorderThickness="0,0,0,1">
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
                     <StackPanel Orientation="Horizontal"/>
